<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id = "@+id/jayLinear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:scaleType="fitXY"
                android:id="@+id/imageView"
                android:src="@drawable/jay_icon1"
                android:onClick="goToMainActivity"/>
            <LinearLayout
                android:id = "@+id/opusLinear11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/textView1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jay_name"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jay_nation"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jay_birth"
                    />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="?android:attr/listDivider"
            android:id="@+id/div"
            android:layout_below="@+id/jayLinear1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/div">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="113dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.33"
                    android:scaleType="fitXY"
                    android:id="@+id/album1"
                    android:src="@drawable/jay"
                    android:onClick="goToAlbum1Detail"/>
                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="113dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.33"
                    android:scaleType="fitXY"
                    android:id="@+id/album2"
                    android:src="@drawable/opus"
                    android:onClick="gotoOpusDetail"/>
                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="113dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.33"
                    android:scaleType="fitXY"
                    android:id="@+id/album3"
                    android:src="@drawable/jay_album2"
                    android:onClick="goToMainActivity"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5">

                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="113dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.33"
                    android:scaleType="fitXY"
                    android:id="@+id/album4"
                    android:src="@drawable/jay_album3"
                    android:onClick="goToMainActivity"/>
                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="113dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.33"
                    android:scaleType="fitXY"
                    android:id="@+id/album5"
                    android:src="@drawable/jay_album4"
                    android:onClick="goToMainActivity"/>
                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="113dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.33"
                    android:scaleType="fitXY"
                    android:id="@+id/album6"
                    android:src="@drawable/jay_album5"
                    android:onClick="goToMainActivity"/>

            </LinearLayout>


            </LinearLayout>

        </LinearLayout>

</RelativeLayout>